[WEB-403] Fix 404 animation on mobile and tablet (#211)

--- a/styles/components/_travolta.scss
+++ b/styles/components/_travolta.scss
@@ -1,19 +1,17 @@
 .travolta {
-  margin-top: 30px;
+  display: none;
 
-  video {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  @include medium {
+  @include very-large {
     margin-top: 50px;
-  }
-
-  @include large {
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(calc(-50% - 350px));
+    display: block;
+
+    video {
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
